added another example
updated gitignore to include output files from SSCNA

added example 'Nitrogenase' to readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-# data
+# data:
 candidate_designs/
 matches/
+SSCNA_output/
 
-# OS
+
+# OS:
 .DS_Store
 Thumbs.db
 
+# Local:
 __pycache__/
 modules/__pycache__
 *.pyc
